Fixed dark mode toggle glitch; added to all pages

--- a/main.css
+++ b/main.css
@@ -119,3 +119,51 @@ gap:20px;
   background-color: #ddd;
   color: #222;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: #333;
+  color: white;
+  border:#222;
+  padding: 15px;
+  margin:0;
+  border: none;
+  border-radius: 18px;
+  gap:20px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right:0;
+  background-color: #333;
+  min-width: 100px;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 5px;
+}
+
+.dropdown-content button {
+  color: white;
+  background: none;
+  border: none;
+  padding: 10px;
+  margin:0;
+  text-align: left;
+  width: 100%;
+  cursor: pointer;
+}
+
+.dropdown-content button:hover {
+  background-color: #555;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
